@@ -3,7 +3,7 @@
 /**
  * Copyright (c) 2011, Erasmus MC
  * All rights reserved.
- * 
+ *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
  *    * Redistributions of source code must retain the above copyright
@@ -14,7 +14,7 @@
  *    * Neither the name of Erasmus MC nor the
  *      names of its contributors may be used to endorse or promote products
  *      derived from this software without specific prior written permission.
- *      
+ *
  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
@@ -25,7 +25,7 @@
  * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- * 
+ *
  * @author Michiel Rook <michiel@touchdownconsulting.nl>
  * @package Gems
  * @subpackage Default
@@ -33,103 +33,185 @@
 
 /**
  * Performs bulk-mail action, can be called from a cronjob
- * 
+ *
  * @author Michiel Rook <michiel@touchdownconsulting.nl>
  * @package Gems
  * @subpackage Default
  */
-class Gems_Default_EmailAction extends Gems_Default_TokenPlanAction
+class Gems_Default_CronAction extends MUtil_Controller_Action
 {
-    private $_organizationId = null;
-    private $_intervalDays = 7;
-    
     /**
-     * Constructs
-     * @param strings $mode Either 'notmailed' or 'reminder'
+     *
+     * @var Zend_Db_Adapter_Abstract
      */
-    protected function getFilter($mode = null)
-    {
-        $filter = array(
+    public $db;
+
+    /**
+     * Standard filter that must be true for every token query.
+     *
+     * @var array
+     */
+    protected $defaultFilter = array(
         	'can_email'           => 1,
-            'gto_id_organization' => $this->_organizationId,
             'gtr_active'          => 1,
             'gsu_active'          => 1,
             'grc_success'         => 1,
         	'gto_completion_time' => NULL,
-        	'`gto_valid_from` >= DATE_ADD(CURRENT_DATE, INTERVAL -4 WEEK)',
-        	'`gto_valid_from` <= DATE_ADD(CURRENT_DATE, INTERVAL 2 WEEK)',
+        	'gto_valid_from <= CURRENT_DATE',
             '(gto_valid_until IS NULL OR gto_valid_until >= CURRENT_TIMESTAMP)'
         );
-        
-        if (isset($mode) && $mode == 'reminder') {
-            $filter[] = 'gto_mail_sent_date <= DATE_SUB(CURRENT_DATE, INTERVAL ' . $this->_intervalDays . ' DAY)';
-        } else {
-            $filter['gto_mail_sent_date'] = NULL;
-        }
-        
-        return $filter;
-    }
-    
+
+    /**
+     *
+     * @var GemsEscort
+     */
+    public $escort;
+
+    /**
+     *
+     * @var Zend_Session_Namespace
+     */
+    public $session;
+
+    /**
+     * Set to true in child class for automatic creation of $this->html.
+     *
+     * Otherwise call $this->initHtml()
+     *
+     * @var boolean $useHtmlView
+     */
+    public $useHtmlView = true;
+
     /**
      * Loads an e-mail template
+     *
      * @param integer|null $templateId
      */
     protected function getTemplate($templateId)
     {
-        $model = new MUtil_Model_TableModel('gems__mail_templates');
-
-        return $model->loadFirst(array('gmt_id_message' => $templateId));
+        return $this->db->fetchRow('SELECT * FROM gems__mail_templates WHERE gmt_id_message = ?', $templateId);
     }
-    
+
+    /**
+     * Returns the login name belonging to this user.
+     *
+     * @param int $userId
+     * @return string
+     */
+    protected function getUserLogin($userId)
+    {
+        return $this->db->fetchOne("SELECT gsf_login FROM gems__staff WHERE gsf_id_user = ?", $userId);
+    }
+
     public function indexAction()
     {
         $this->initHtml();
-        
-        $model = $this->loader->getTracker()->getTokenModel();
-        $model->setCreate(false);
-        
+        $this->mailJob();
+    }
+
+    public function mailJob()
+    {
+        // Test: update `gems__tokens` set `gto_mail_sent_date` = null where `gto_mail_sent_date` > '2011-10-23'
+
+        $currentUser = isset($this->session->user_login) ? $this->session->user_login : null;
+
+        $model  = $this->loader->getTracker()->getTokenModel();
         $mailer = new Gems_Email_TemplateMailer($this->escort);
-        
+        // $mailer->setDefaultTransport(new MUtil_Mail_Transport_EchoLog());
+
+        $jobs = $this->db->fetchAll("SELECT * FROM gems__mail_jobs WHERE gmj_active = 1");
+
+        if ($jobs) {
+            foreach ($jobs as $job) {
+                $this->escort->loadLoginInfo($this->getUserLogin($job['gmj_id_user_as']));
+
+                // Set up filter
+                $filter = $this->defaultFilter;
+                if ($job['gmj_filter_mode'] == 'R') {
+                    $filter[] = 'gto_mail_sent_date <= DATE_SUB(CURRENT_DATE, INTERVAL ' . $job['gmj_filter_days_between'] . ' DAY)';
+                } else {
+                    $filter['gto_mail_sent_date'] = NULL;
+                }
+                if ($job['gmj_id_organization']) {
+                    $filter['gto_id_organization'] = $job['gmj_id_organization'];
+                }
+                if ($job['gmj_id_track']) {
+                    $filter['gto_id_track'] = $job['gmj_id_track'];
+                }
+                if ($job['gmj_id_survey']) {
+                    $filter['gto_id_survey'] = $job['gmj_id_survey'];
+                }
+
+                $tokensData = $model->load($filter);
+
+                if (count($tokensData)) {
+                    $mailer->setMethod($job['gmj_process_method']);
+                    if ($job['gmj_from_method'] == 'F') {
+                        $mailer->setFrom($job['gmj_from_fixed']);
+                    } else {
+                        $mailer->setFrom($job['gmj_from_method']);
+                    }
+
+                    $templateData = $this->getTemplate($job['gmj_id_message']);
+                    $mailer->setSubject($templateData['gmt_subject']);
+                    $mailer->setBody($templateData['gmt_body']);
+
+                    $mailer->setTokens(MUtil_Ra::column('gto_id_token', $tokensData));
+                    $mailer->process($tokensData);
+                }
+
+                Gems_Auth::getInstance()->clearIdentity();
+                $this->escort->session->unsetAll();
+            }
+        }
+
+        $this->html->append($mailer->getMessages());
+
+        if ($currentUser) {
+            $this->escort->loadLoginInfo($currentUser);
+        } else {
+            $this->escort->afterLogout();
+        }
+
+        /*
         if (isset($this->project->email['automatic'])) {
             $batches = $this->project->email['automatic'];
             $numBatches = count($batches['mode']);
-            
+
             for ($i = 0; $i < $numBatches; $i++) {
                 $this->_organizationId = $batches['organization'][$i];
-                
+
                 if (isset($batches['days'][$i])) {
                     $this->_intervalDays = $batches['days'][$i];
                 }
-                
+
                 $this->escort->loadLoginInfo($batches['user'][$i]);
-                
+
                 $model->setFilter($this->getFilter($batches['mode'][$i]));
-                
+
                 $tokensData = $model->load();
-                
+
                 if (count($tokensData)) {
                     $tokens = array();
-                    
+
                     foreach ($tokensData as $tokenData) {
                         $tokens[] = $tokenData['gto_id_token'];
                     }
-                    
+
                     $templateData = $this->getTemplate($batches['template'][$i]);
                     $mailer->setSubject($templateData['gmt_subject']);
                     $mailer->setBody($templateData['gmt_body']);
                     $mailer->setMethod($batches['method'][$i]);
                     $mailer->setFrom($batches['from'][$i]);
                     $mailer->setTokens($tokens);
-                    
+
                     $mailer->process($tokensData);
                 }
-                
+
                 Gems_Auth::getInstance()->clearIdentity();
                 $this->escort->session->unsetAll();
             }
         }
-        
-        $this->html->append($mailer->getMessages());
-        
+        // */
     }
 }
