@@ -243,7 +243,7 @@ class Gems_Util_DbLookup extends Gems_Registry_TargetAbstract
 
         if (! $data) {
             $data = $this->db->fetchPairs("SELECT gsf_id_user, CONCAT(COALESCE(gsf_last_name, '-'), ', ', COALESCE(gsf_first_name, ''), COALESCE(CONCAT(' ', gsf_surname_prefix), ''))
-                    FROM gems__staff WHERE ORDER BY gsf_last_name, gsf_first_name, gsf_surname_prefix");
+                    FROM gems__staff ORDER BY gsf_last_name, gsf_first_name, gsf_surname_prefix");
         }
 
         return $data;
